--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -23,7 +23,7 @@
 }
 
 .form {
-  width: 20%;
+  width: 25%;
 }
 
 .btn {
@@ -42,6 +42,24 @@
 
 .redInput {
   border-color: red;
+}
+
+@media only screen and (min-width: 431px) and (max-width: 768px) {
+  .form {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 767px) and (max-width: 990px) {
+  .form {
+    width: 40%;
+  }
+}
+
+@media only screen and (min-width: 991px) and (max-width: 1023px) {
+  .form {
+    width: 30%;
+  }
 }
 
 @media only screen and (max-width: 430px) {
