--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -4,6 +4,7 @@
   width: 100%;
   background: url("../../../assets/img/fondo-proyecto.jpg") no-repeat center
     center;
+  text-align: center;
 }
 
 .container {
@@ -15,7 +16,7 @@
 }
 
 .form {
-  width: 30%;
+  width: 40%;
 }
 
 .row {
@@ -28,7 +29,7 @@
   color: white;
 }
 
-.bi-info-circle{
+.bi-info-circle {
   cursor: pointer;
 }
 
@@ -44,6 +45,24 @@
   border-color: red;
 }
 
+@media only screen and (min-width: 431px) and (max-width: 768px) {
+  .form {
+    width: 75%;
+  }
+}
+
+@media only screen and (min-width: 767px) and (max-width: 990px) {
+  .form {
+    width: 55%;
+  }
+}
+
+@media only screen and (min-width: 991px) and (max-width: 1199px) {
+  .form {
+    width: 45%;
+  }
+}
+
 @media only screen and (max-width: 430px) {
   .background {
     background: none;
@@ -53,7 +72,7 @@
     width: 70%;
   }
 
-  .btn2{
+  .btn2 {
     width: 40%;
   }
 }
