Language button added Login & tootips added Register

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,30 @@
 <div class="background">
+  <div>
+    <div class="lang">
+      <button class="btnLang" (click)="showLangLogin()">
+        {{ "lang" | translate }}
+      </button>
+    </div>
+    <div *ngIf="showLang" class="card">
+      <div class="card-body">
+        <div class="row">
+          <div class="divLang">
+            <img class="imgLang" src="../../../assets/img/icon-spain.png" />
+          </div>
+          <div class="divLang">
+            <mat-slide-toggle
+              [(ngModel)]="slider"
+              (click)="setLang()"
+            ></mat-slide-toggle>
+          </div>
+          <div class="divLang">
+            <img class="imgLang" src="../../../assets/img/icon-england.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
     <form class="form" [formGroup]="form">
       <div class="window">
@@ -87,7 +113,10 @@
             <button (click)="auth()" [disabled]="form.invalid" class="btn">
               {{ "login" | translate }}
             </button>
-            <p routerLink="/restablishPassword" style="cursor: pointer; margin-top: 10px;">
+            <p
+              routerLink="/restablishPassword"
+              style="cursor: pointer; margin-top: 10px"
+            >
               {{ "forgotPassword" | translate }}
             </p>
           </div>
