--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -15,6 +15,32 @@
   width: 100%;
 }
 
+.lang {
+  position: fixed;
+  top: 5%;
+  left: 5%;
+}
+
+.btnLang {
+  background-color: transparent;
+  border-color: #005540;
+}
+
+.card {
+  width: 11%;
+  left: 2%;
+  top: 10%;
+  position: fixed;
+  border-color: #005540;
+}
+
+.divLang {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32%;
+}
+
 .window {
   margin-top: 30px;
   align-items: center;
@@ -65,6 +91,21 @@
 @media only screen and (max-width: 430px) {
   .background {
     background: none;
+  }
+
+  .btnLang {
+    position: fixed;
+    top: 85%;
+    right: 50%;
+    left: 40%;
+    width: 20%;
+  }
+
+  .card {
+    top: 75%;
+    right: 50%;
+    left: 30%;
+    width: 40%;
   }
 
   .form {
