Register validation done

--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -20,11 +20,12 @@
 }
 
 .row {
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .btn2 {
   width: 40%;
+  margin: 10px;
   background-color: #005540;
   color: white;
 }
