--- a/src/app/components/restablish-password/restablish-password.component.html
+++ b/src/app/components/restablish-password/restablish-password.component.html
@@ -24,9 +24,13 @@
             type="text"
           />{{ email }}
         </div>
-        <div (click)="setNewPassword()" class="row mt-5">
-          <button>{{ "send" | translate }}</button>
-          <button routerLink="/login">{{ "cancel" | translate }}</button>
+        <div class="row mt-5">
+          <button (click)="setNewPassword()" class="btn">
+            {{ "send" | translate }}
+          </button>
+          <button class="btn" routerLink="/login">
+            {{ "cancel" | translate }}
+          </button>
         </div>
       </div>
       <div>
