--- a/src/app/components/restablish-password/restablish-password.component.scss
+++ b/src/app/components/restablish-password/restablish-password.component.scss
@@ -19,10 +19,9 @@
     height: 100%;
   }
 
-  button{
+  .btn{
     width: 40%;
     background-color: #005540;
-    justify-content: space-between;
     color: white;
   }
 
