--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="background">
   <div>
     <div class="lang">
-      <button class="btnLang" (click)="showLangLogin()">
+      <button class="btn btnLang" (click)="showLangLogin()">
         {{ "lang" | translate }}
       </button>
     </div>
@@ -24,7 +24,6 @@
       </div>
     </div>
   </div>
-
   <div class="container">
     <form class="form" [formGroup]="form">
       <div class="window">
