--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -15,20 +15,13 @@
   width: 100%;
 }
 
-.lang {
-  position: fixed;
-  top: 5%;
-  left: 5%;
-}
-
-.btnLang {
-  background-color: transparent;
-  border-color: #005540;
+.row {
+  justify-content: center;
 }
 
 .card {
-  width: 11%;
-  left: 2%;
+  width: 15%;
+  right: 2%;
   top: 10%;
   position: fixed;
   border-color: #005540;
@@ -39,6 +32,20 @@
   justify-content: center;
   align-items: center;
   width: 32%;
+  padding: 0;
+}
+
+.lang {
+  position: fixed;
+  top: 5%;
+  right: 7%;
+  left: 86%;
+}
+
+.btn.btnLang {
+  width: 130%;
+  background-color: #005540;
+  color: white;
 }
 
 .window {
@@ -70,21 +77,92 @@
   border-color: red;
 }
 
-@media only screen and (min-width: 431px) and (max-width: 768px) {
+@media only screen and (min-width: 431px) and (max-width: 500px) {
   .form {
     width: 60%;
   }
+
+  .lang {
+    right: 19%;
+    left: 66%;
+  }
+
+  .card {
+    right: 5%;
+    width: 40%;
+  }
 }
 
-@media only screen and (min-width: 767px) and (max-width: 990px) {
+@media only screen and (min-width: 501px) and (max-width: 571px) {
+  .form {
+    width: 60%;
+  }
+
+  .lang {
+    right: 15%;
+    left: 71%;
+  }
+
+  .card {
+    right: 5%;
+    width: 30%;
+  }
+}
+
+@media only screen and (min-width: 571px) and (max-width: 768px) {
+  .form {
+    width: 60%;
+  }
+
+  .lang {
+    right: 12%;
+    left: 76%;
+  }
+
+  .card {
+    right: 5%;
+    width: 24%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 990px) {
   .form {
     width: 40%;
+  }
+
+  .lang {
+    right: 9%;
+    left: 82%;
+  }
+
+  .card {
+    width: 21%;
   }
 }
 
 @media only screen and (min-width: 991px) and (max-width: 1023px) {
   .form {
     width: 30%;
+  }
+
+  .lang {
+    right: 7%;
+    left: 83%;
+  }
+
+  .card {
+    width: 18%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .lang {
+    right: 5%;
+    left: 89%;
+  }
+
+  .card {
+    width: 11%;
   }
 }
 
@@ -93,19 +171,20 @@
     background: none;
   }
 
-  .btnLang {
+  .card {
+    top: 75%;
+    right: 50%;
+    left: 32%;
+    width: 40%;
+  }
+
+  .btn.btnLang {
     position: fixed;
     top: 85%;
     right: 50%;
     left: 40%;
-    width: 20%;
-  }
-
-  .card {
-    top: 75%;
-    right: 50%;
-    left: 30%;
-    width: 40%;
+    width: 25%;
+    text-align: center;
   }
 
   .form {
