Email restore stylepage edit

--- a/src/app/components/restablish-password/restablish-password.component.scss
+++ b/src/app/components/restablish-password/restablish-password.component.scss
@@ -1,34 +1,50 @@
 .background {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: url("../../../assets/img/fondo-proyecto.jpg") no-repeat center
-      center;
-  }
-  
-  .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    width: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background: url("../../../assets/img/fondo-proyecto.jpg") no-repeat center
+    center;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.form {
+  height: 100%;
+}
+
+.btn {
+  width: 40%;
+  background-color: #005540;
+  color: white;
+}
+
+.row {
+  justify-content: space-around;
+}
+
+.redInput {
+  border-color: red;
+}
+
+@media only screen and (max-width: 430px) {
+  .background {
+    background: none;
   }
 
-  .form{
-    height: 100%;
+  .form {
+    width: 70%;
   }
 
-  .btn{
+  .btn {
     width: 40%;
-    background-color: #005540;
-    color: white;
   }
-
-  .row{
-    justify-content: space-around;
-  }
-
-  .redInput {
-    border-color: red;
-  }
+}
