Profile page & restore password done

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -46,6 +46,13 @@
     <div class="card-body">
       <div class="col">
         
+        <div class="row">
+          <button class="btn" routerLink="/profile" routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }">
+            {{ "profilePage" | translate }}
+          </button>
+        </div>
+
         <div class="row" [style]="showAdmin">
           <button class="btn" routerLink="/admin" routerLinkActive="active-link"
             [routerLinkActiveOptions]="{ exact: true }">
