--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -8,4 +8,5 @@
     <img src="./assets/icons/crosshair.png" width="15" height="15" alt="" title="" class="icn">
 </button>
 <div id="map" class="map-container"></div>
-
+<app-searchbar></app-searchbar>
+<app-radio-slider class="overlaySlider"></app-radio-slider>
