--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -74,4 +74,6 @@
     </div>
   </div>
 </nav>
+<app-modal-transaction></app-modal-transaction>
+<app-float-button></app-float-button>
 <router-outlet></router-outlet>
