--- a/src/app/components/restablish-password/restablish-password.component.html
+++ b/src/app/components/restablish-password/restablish-password.component.html
@@ -10,6 +10,7 @@
             "
             class="form-control"
             formControlName="dni"
+            placeholder="{{ 'enterUser' | translate }}"
             type="text"
           />{{ dni }}
         </div>
@@ -21,6 +22,7 @@
             "
             class="form-control"
             formControlName="email"
+            placeholder="{{ 'writeEmail' | translate }}"
             type="text"
           />{{ email }}
         </div>
