--- a/src/app/components/float-button/float-button.component.html
+++ b/src/app/components/float-button/float-button.component.html
@@ -1,56 +1,111 @@
-<div (click)="showCardMap()" class="btn-flotante"
-  [ngStyle]="{ padding: showCard || showCardLang ? '0px 0px' : '20px 22px' }">
-  <svg *ngIf="!showCard && !showCardLang" id="biHouse" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-    fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+<div
+  (click)="showCardMap()"
+  class="btn-flotante"
+  [ngStyle]="{ padding: showCard || showCardLang ? '0px 0px' : '20px 22px' }"
+>
+  <svg
+    *ngIf="!showCard && !showCardLang"
+    id="biHouse"
+    xmlns="http://www.w3.org/2000/svg"
+    width="20"
+    height="20"
+    fill="currentColor"
+    class="bi bi-house"
+    viewBox="0 0 16 16"
+  >
     <path
-      d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z" />
+      d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"
+    />
   </svg>
   <div *ngIf="showCard" class="card">
     <div class="card-body">
       <div class="col">
         <div class="row">
-          <button class="btn" routerLink="/main" routerLinkActive="active-link"
-            [routerLinkActiveOptions]="{ exact: true }">
+          <button
+            class="btn"
+            routerLink="/main"
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
             {{ "globalPosition" | translate }}
           </button>
         </div>
         <div class="row">
-          <button class="btn" routerLink="/accounts" routerLinkActive="active-link"
-            [routerLinkActiveOptions]="{ exact: true }">
+          <button
+            class="btn"
+            routerLink="/accounts"
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
             {{ "accounts" | translate }}/{{ "receipts" | translate }}
           </button>
         </div>
         <div class="row">
-          <button class="btn" routerLink="/cards" routerLinkActive="active-link"
-          [routerLinkActiveOptions]="{ exact: true }">
+          <button
+            class="btn"
+            routerLink="/cards"
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
             {{ "cards" | translate }}
           </button>
         </div>
         <div class="row">
-          <button class="btn" routerLink="/transfers" routerLinkActive="active-link"
-          [routerLinkActiveOptions]="{ exact: true }">
+          <button
+            class="btn"
+            routerLink="/transfers"
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
             {{ "transfers" | translate }}
           </button>
         </div>
         <div class="row">
-          <button class="btn" routerLink="/deposits" routerLinkActive="active-link"
-          [routerLinkActiveOptions]="{ exact: true }">
+          <button
+            class="btn"
+            routerLink="/deposits"
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
             {{ "deposits" | translate }}
           </button>
         </div>
+        <div class="row">
+          <button
+            class="btn"
+            routerLink="/profile"
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
+            {{ "profilePage" | translate }}
+          </button>
+        </div>
         <div class="row" [style]="showAdmin">
-          <button class="btn" routerLink="/admin" routerLinkActive="active-link"
-            [routerLinkActiveOptions]="{ exact: true }">
+          <button
+            class="btn"
+            routerLink="/admin"
+            routerLinkActive="active-link"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
             {{ "adminPanel" | translate }}
           </button>
         </div>
         <div class="row">
-          <button routerLink="/login" (click)="resetLanguage()" class="btn" routerLinkActive="active-link">
+          <button
+            routerLink="/login"
+            (click)="resetLanguage()"
+            class="btn"
+            routerLinkActive="active-link"
+          >
             {{ "logout" | translate }}
           </button>
         </div>
         <div class="row">
-          <button (click)="showCardLangMap()" class="btn" routerLinkActive="active-link">
+          <button
+            (click)="showCardLangMap()"
+            class="btn"
+            routerLinkActive="active-link"
+          >
             {{ "lang" | translate }}
           </button>
         </div>
@@ -64,7 +119,10 @@
           <img class="imgLang" src="../../../assets/img/icon-spain.png" />
         </div>
         <div class="divLang">
-          <mat-slide-toggle [(ngModel)]="slider" (click)="setLang()"></mat-slide-toggle>
+          <mat-slide-toggle
+            [(ngModel)]="slider"
+            (click)="setLang()"
+          ></mat-slide-toggle>
         </div>
         <div class="divLang">
           <img class="imgLang" src="../../../assets/img/icon-england.png" />
