--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
           aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        <app-details [cashiersList]="cashierList"></app-details>
+        <app-details [cashiers]="cashierList"></app-details>
       </div>
     </div>
     <span class="navbar-brand" routerLink="map" routerLinkActive="active-link"
