--- a/src/app/components/profile-page/profile-page.component.html
+++ b/src/app/components/profile-page/profile-page.component.html
@@ -5,7 +5,7 @@
         <div class="col">
           <div class="row">
             <svg
-              routerLink="/main"
+              routerLink="/main/map"
               xmlns="http://www.w3.org/2000/svg"
               width="30"
               height="30"
