--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -23,7 +23,7 @@
         <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#closeModal">
             {{"cancel" | translate}}
         </button>
-        <button type="button" class="btn btn-primary btn-lg" routerLink="/main">
+        <button type="button" class="btn btn-primary btn-lg" routerLink="/main/map">
             {{"end" | translate}}
         </button>
     </div>
@@ -37,7 +37,7 @@
             {{"cancelText" | translate}}
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" routerLink="/main" data-bs-dismiss="modal">{{"confirm" | translate}}</button>
+            <button type="button" class="btn btn-primary" routerLink="/main/map" data-bs-dismiss="modal">{{"confirm" | translate}}</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{"cancel" | translate}}</button>
         </div>
       </div>
