admin panel crud

--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -96,7 +96,7 @@
             <button class="btn">{{ "update" | translate }}</button>
           </div>
           <div class="button">
-            <button class="btn">{{ "delete" | translate }}</button>
+            <button class="btn" (click)="deleteCashier()">{{ "delete" | translate }}</button>
           </div>
           <div class="button">
             <button class="btn">{{ "new" | translate }}</button>
