--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -125,13 +125,18 @@
           </button>
         </div>
         <div class="button">
-          <button class="btn">
+          <button class="btn" (click)="deleteCashier()">
             {{ "delete" | translate }}
           </button>
         </div>
         <div class="button">
           <button class="btn">
             {{ "new" | translate }}
+          </button>
+        </div>
+        <div class="button">
+          <button class="btn">
+            {{ "reset" | translate }}
           </button>
         </div>
       </div>
